Version 17.30 - 7 May 2016

- install nonfree firmware for amdgpu, i915, nouveau

Version 17.29 - 4 May 2016

- localedrake:
  o install the right IM packages on Plasma
- harddrake2:
  o don't class Logitech wired kbd+mouse as unknown (mga#3510)

Version 17.28 - 26 April 2016

- recognize new kernel-4.6 drivers

Version 17.25 - 1 April 2016

- diskdrake:
  o fix detecting nvme devices as block devices
  o fix displaying partitions when there's only one disk
    (and the resulting crash: mga#18076)

Version 17.24 - 23 March 2016

- use systemd-detect-virt for detecting virtualization technology

Version 17.22 - 21 March 2016

- display_help:
 o port from WebKit1 to WebKit2 (mga#15031)

Version 17.20 - 18 March 2016

- diskdrake:
  o fix partitions not initially displayed (mga#17564)

Version 17.19 - 24 February 2016

- detect nvme devices as block devices (mga#17743)
- detect partitions on nvme devices (mga#17743)
- enable to use WebKit2 with mygtk3
- drakboot:
  o partial fix for removing kernel from grub2 config (mga#16268)

Version 17.18.1 - 10 February 2016

- drakboot:
  o add support for grub2-text too (mga#9431)
- library (for draklive-install):
  o check ESP has the right fs type (mga#16246)
  o check that ESP mount point actually is an ESP

Version 17.16 - 25 January 2016

- detect_devices:
  o fix a crash on non x86

Version 17.15 - 16 January 2016

- diskdrake:
  o fix crash (mga#17484)

Version 17.12 - 2 January 2016

- misc cleanups
- diskdrake:
  o auto fill LV name from mntpnt (mga#5407)
  o suggest "lv_foo" instead of just "foo" for LVname
- drakboot:
  o skip swap in the list of partitions (mga#15767)
  o split drakautologin from drakboot (mga#7160)
- draksound:
  o drop support for ISApnp sound cards
  o drop support for picking an arbitrary driver
  o drop support for switching between OSS <-> ALSA
  o make troubleshooting not an advanced setting

Version 17.8 - 22 December 2015

- recognize new kernel-4.3 drivers
- use sddm instead of kdm