@@ -1,3 +1,6 @@
+- localedrake:
+  o install the right IM packages on Plasma when using fcitx
+
 Version 17.30 - 7 May 2016
 
 - install nonfree firmware for amdgpu, i915, nouveau
